# deunbundle

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.upm/: store.json
src/: cli.rs  lib.rs  main.rs
src/bundle_detect/: mod.rs
src/fetch/: mod.rs
src/lib_detect/: mod.rs
src/parser/: mod.rs
src/sourcemap/: mod.rs
src/splitter/: mod.rs
src/unminify/: mod.rs
tests/: integration_tests.rs
tests/fixtures/: rollup_sample.js  webpack_sample.js
